# resolver

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  resolver.rs  unix.rs  win.rs
tests/: resolv.conf
