[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
authors = ["Alain Viguier <dandyvica@gmail.com>"]
description = """
Utility crate to query DNSOS resolvers.
"""
documentation = "https://github.com/dandyvica/resolver"
homepage = "https://github.com/dandyvica/resolver"
repository = "https://github.com/dandyvica/resolver"
keywords = ["dns", "resolv"]
categories = ["config", "network-programming", "os::windows-apis"]
license = "MIT"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.65"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58" , features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock"] }

